# Code_Red

./: .dockerignore  .env.sample  .gitignore  .gitignore.hf  Dockerfile  README.md  baseline.py  client.py  inference.py  openenv.yaml  pyproject.toml  run_benchmark.ps1
.github/workflows/: sync_to_hf.yml
codered_env/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  validate-submission.sh
codered_env/openenv_codered.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codered_env/server/: app.py  codered_environment.py  grader.py
codered_env/tests/: stress_test_env.py  test_ambulance_manager.py  test_baseline.py  test_blood_bank.py  test_cascade_engine.py  test_constants.py  test_disruption_engine.py  test_entities.py  test_environment.py  test_environment_call_queue.py  test_environment_phase2.py  test_grader.py  (+12 more)
docs/: CODE_RED_ENV_AUDIT.md
openenv_codered.egg-info/: PKG-INFO
runs/: baseline_task1_seed0.txt
server/: __init__.py  app.py  codered_environment.py  grader.py
tests/: stress_test_env.py  test_blood_bank.py  test_cascade_engine.py  test_client.py  test_constants.py  test_disruption_engine.py  test_done_flag.py  test_e2e.py  test_endpoints.py  test_entities.py  test_environment.py  test_environment_call_queue.py  test_grader.py  test_grader_cascade.py  test_hospital_system.py  test_mutual_aid_manager.py  test_observations_phase2.py  test_openenv_validate.py  test_patient_manager.py  test_patient_manager_phase2.py  test_phase2_dispatch.py  test_road_network.py  test_wired_environment.py
(+34 files in other folders)
